--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "jotai": "^2.12.0",
     "react": "^19.0.0",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
     "react-slick": "^0.30.3",
-    "recoil": "^0.7.7",
-    "recoil-persist": "^5.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.15"
   },
